# libshijima

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
rapidxml/: rapidxml_print.hpp
shijima/: animation.cc  animation.hpp  config.hpp  hotspot.cc  hotspot.hpp  log.cc  log.hpp  math.hpp  parser.cc  parser.hpp  parser_error.cc  parser_error.hpp  pose.hpp  serialization.hpp  shijima.hpp  translator.cc  translator.hpp  variable.hpp  xml_doc.hpp
shijima/action/: action.hpp  animate.cc  animate.hpp  animation.cc  animation.hpp  base.cc  base.hpp  breed.cc  breed.hpp  breedjump.cc  breedjump.hpp  breedmove.cc  breedmove.hpp  complexjump.cc  complexjump.hpp  complexmove.cc  complexmove.hpp  dragged.cc  dragged.hpp  fall.cc  fall.hpp  instant.cc  instant.hpp  interact.cc  interact.hpp  jump.cc  jump.hpp  look.cc  look.hpp  move.cc  move.hpp  movewithturn.cc  movewithturn.hpp  mute.cc  mute.hpp  offset.cc  offset.hpp  reference.cc  reference.hpp  resist.cc  (+19 more)
shijima/behavior/: base.cc  base.hpp  behavior.hpp  list.cc  list.hpp  manager.cc  manager.hpp
shijima/broadcast/: client.cc  client.hpp  interaction.cc  interaction.hpp  manager.cc  manager.hpp  server.cc  server.hpp  server_state.hpp
shijima/mascot/: environment.hpp  factory.cc  factory.hpp  manager.cc  manager.hpp  mascot.hpp  state.cc  state.hpp  tick.hpp
shijima/scripting/: condition.cc  condition.hpp  context.cc  context.hpp  variables.cc  variables.hpp
shijima/scripting/duktape/: duk_config.h  duktape.cc
tests/: parser_test.cc
tests/shimeji/test1/: actions.xml  behaviors.xml
